added style for tri-schpeal units.

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,16 @@ a:hover.fauxbutton {
   text-decoration: none;
 }
 
+.tri-schpeal p {
+  margin: 8px 0px;
+  text-align: center;
+  font-weight: 200;
+  font-size: 1.5em;
+  line-height: 1.131em;
+  color: #555;
+
+}
+
 .widget a:link, .widget a:visited {
     color: #E45044;
 }
