moved around things to make wp happy.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/*
+Theme Name: nuDemocrats
+Theme URI: http://ccs.neu.edu/home/alice
+Description: What happens when a libertarian builds something for Democrats.
+Version: 2.0
+Author: Alice Young
+Author URI: http://ccs.neu.edu/home/alice
+*/
+
 /* ------------------------- Navigational Nonsense ------------------------- */
 nav {
     padding: 10px 0px 20px 0px;
