--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@
 Theme Name: nuDemocrats
 Theme URI: http://ccs.neu.edu/home/alice
 Description: What happens when a libertarian builds something for Democrats.
-Version: 2.0
 Author: Alice Young
 Author URI: http://ccs.neu.edu/home/alice
+Version: 2.0
+Tags: responsive
+
+License:
+License URI:
+
+General Comments: Fuck everything.
 */
 
 /* ------------------------- Navigational Nonsense ------------------------- */
