--- a/style.css
+++ b/style.css
@@ -190,6 +190,19 @@ a:hover.fauxbutton {
 
 }
 
+blockquote.special {
+    background-color: rgba(255,255,255,0.5);
+    padding: 10px;
+    font-weight: 300;
+    font-size: 1.2em;
+    line-height: 1.2em;
+}
+
+blockquote.special p {
+    margin: 0;
+    display: block;
+}
+
 .widget a:link, .widget a:visited {
     color: #E45044;
 }
@@ -203,7 +216,7 @@ a:hover.fauxbutton {
 .about p {
     font-weight: 300;
     font-size: 1.8em;
-    line-height: 1em;
+    line-height: 1.5em;
 }
 
 /* Subscription Form ----------------------------------- */
