--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: nuDemocrats
+Theme Name: NU College Democrats
 Theme URI: http://ccs.neu.edu/home/alice
 Description: What happens when a libertarian builds something for Democrats.
 Author: Alice Young
