changed the theme title.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 
-Theme Name: nuDemocrats
+Theme Name: NU Democrats Holding Page
 Theme URI: NO URL; Custom.
 Description: Some silly experiment gone wild/live.
 Version: 1.0
