--- a/style.css
+++ b/style.css
@@ -207,13 +207,13 @@ blockquote.special p {
 blockquote > footer {
   height: auto;
   background-color: transparent;
-  padding: 0;
+  padding: 0 0 0 2em;
   color: #777;
   font-weight: 300;
 }
 
 blockquote > footer:before {
-  content: "—"
+  content: "— "
 }
 
 .widget a:link, .widget a:visited {
@@ -259,8 +259,11 @@ blockquote > footer:before {
 .eboard blockquote {
   background-color: rgba(255,255,255,0.5);
   font-style: italic;
+  font-family: Georgia, 'Roboto Slab', serif;
+  font-size: 1.131em;
+  line-height: 1.25em;
   margin: .33em auto;
-  padding: 8px;
+  padding: 12px;
   width: 70%;
 }
 
@@ -399,8 +402,6 @@ img.social {
       padding-bottom: 10px;
     }
 
-    
-
     nav .logo {
       float: left;
     }
@@ -440,6 +441,14 @@ img.social {
 
     .eboard strong:after {
       content: " ";
+    }
+
+    .eboard blockquote {
+      width: 90%;
+    }
+
+    blockquote > footer {
+      text-align: left;
     }
 
     .content-wrap {
