untested changes to style.css, footer fixes, i think.

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ blockquote > footer:before {
 footer {
     background-color: #333;
     color: #aaa;
-    height: 300px;
+    min-height: 300px;
     padding-top: 10px;
 }
 
