Separate out all the Sass into separate files, following the 7-1 methodology

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,651 +12,28 @@ License URI:
 
 */
 
-/* ------------------------- Navigational Nonsense ------------------------- */
-nav {
-    padding: 10px 0px 20px 0px;
-}
-
-nav .logo {
-    float: left;
-}
-
-nav .brand {
-}
-
-nav ul {
-    margin:0;
-    padding: 0;
-    list-style-type: none;
-    float: right;
-}
-
-nav li {
-    margin-left: 20px;
-    display: inline;
-}
-
-nav ul a:hover {
-    text-decoration: none;
-}
-
-.logo {
-  border: 0;
-  width: 200px;
-}
-
-/* --------------------------- Widgetized Footer --------------------------- */
-
-.widget h3 {
-    text-transform: uppercase;
-    letter-spacing: .25em;
-    line-height: 1.725em;
-    border-bottom: 2px solid #999;
-    margin: 0 0 5px 0;
-    font-weight: 400;
-}
-
-
-.widget ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-.widget li {
-    text-align: right;
-}
-
-.widget li {
-    padding: 8px 0;
-    border-bottom: 1px solid #444;
-}
-
-.widget li a:hover {
-    text-decoration: none;
-}
-
-
-
-/* --------------------------------- My Shit -------------------------------- */
-
-body {
-    font-family: 'Roboto Slab', serif;
-    font-size: 1em;
-    line-height: 1.25em;
-}
-
-body {
-    background-color: #DEDEDE;
-    color: #333;
-}
-
-a:link {
-    color: #E45044;
-}
-
-a:hover {
-    color: #5DBEA9;
-}
-
-a:visited {
-    color: #35889B;
-}
-
-h1 {
-  color: #072C3F;
-  font-weight: 700;
-  text-transform: uppercase;
-  width: auto;
-}
-
-h2 {
-  border-bottom: #565656 solid 2px;
-  font-size: 1.17em;
-  font-weight: 400;
-  letter-spacing: .05em;
-  line-height: 1.25em;
-  text-transform: uppercase;
-  margin-top: 0;
-  margin-bottom: 0px;
-  padding-bottom: 4px;
-}
-
-h4 {
-    color: #547980;
-    margin: .3333em 0;
-    font-weight: normal;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 1.131em;
-    border-bottom: 1px dotted #547980;
-    padding-bottom: 2px;
-    width: 33.3333%;
-}
-
-p.small {
-  font-weight: 300;
-  font-size: 0.813em;
-  color: #444;
-}
-
-form input[type=checkbox] {
-  margin-right: 5px;
-}
-
-form input[type=text], form input[type=email] {
-    width: 100%;
-    display: block;
-    border: 1px solid #999;
-    background-color: #acacac;
-    color: #eee;
-    font-family: 'Open Sans', sans-serif;
-    padding-top: 6px;
-    padding-bottom: 6px;
-
-    /*
-    -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-    */
-}
-
-nav ul a:link, nav ul a:visited {
-    color: #E45044;
-}
-
-nav ul a:hover {
-    color: #00A7B6;
-}
-
-nav li {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.115em;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-a:link.fauxbutton, a:visited.fauxbutton {
-  background-color: #35889B;
-  color: #DEDEDE;
-  font-weight: 400;
-  font-size: 1.313em;
-  display: inline-block;
-  text-align: center;
-  padding: 7px;
-}
-
-a:hover.fauxbutton {
-  text-decoration: none;
-}
-
-.tri-schpeal p {
-  margin: 16px 0px;
-  text-align: center;
-  font-weight: 200;
-  font-size: 1.5em;
-  line-height: 1.131em;
-  color: #555;
-
-}
-
-blockquote.special {
-    background-color: rgba(255,255,255,0.5);
-    padding: 10px;
-    font-weight: 300;
-    font-size: 1.2em;
-    line-height: 1.2em;
-}
-
-blockquote.special p {
-    margin: 0;
-    display: block;
-}
-
-blockquote > footer {
-  height: auto;
-  background-color: transparent;
-  padding: 0 0 0 2em;
-  color: #777;
-  font-weight: 300;
-}
-
-blockquote > footer:before {
-  content: "— "
-}
-
-.widget a:link, .widget a:visited {
-    color: #E45044;
-}
-
-.widget a:hover {
-    color: #5DBEA9;
-}
-
-/* About Page - Custom Template ------------------------ */
-
-.about p {
-    font-weight: 300;
-    font-size: 1.8em;
-    line-height: 1.5em;
-}
-
-/* Executive Board Page - Custom Template ------------------------ */
-
-.eboard h3 {
-  margin-bottom: .5em;
-}
-
-.eboard p {
-  margin: 0;
-}
-
-.eboard h3 .position {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 0.813em;
-  font-weight: 400;
-  color: #547980;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.eboard strong {
-  display: inline-block;
-  width: 200px;
-}
-
-.eboard blockquote {
-  background-color: rgba(255,255,255,0.5);
-  font-style: italic;
-  font-family: Georgia, 'Roboto Slab', serif;
-  font-size: 1.131em;
-  line-height: 1.25em;
-  margin: .33em auto;
-  padding: 12px;
-  width: 70%;
-}
-
-.eboard blockquote > footer {
-  font-style: normal;
-}
-
-/* Subscription Form ----------------------------------- */
-
-#mc_embed_signup .indicates-required {
-    color: #757A7C;
-    font-size: .875em;
-}
-
-#mc_embed_signup .asterisk {
-    color: #E45044;
-}
-
-#mc_embed_signup .mc-field-group {
-    margin-bottom: 8px;
-}
-/* Footer ---------------------------------------------- */
-
-footer {
-    background-color: #333;
-    color: #aaa;
-    padding-top: 10px;
-}
-
-footer .copy {
-    font-size: .84em;
-}
-
-/* ---------------- Additional General Structural Bullshit! ---------------- */
-
-.center {
-    text-align: center;
-}
-
-.pull-right {
-    float: right;
-}
-
-.pull-left {
-    float: left;
-}
-
-.clear {
-    clear:both;
-}
-
-.content-wrap {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin-bottom: 100px;
-}
-
-img.social {
-    width: 50px;
-    margin: 6px 4px;
-}
-
-
-/* ------------------------- MEDIA QUERY BULLSHIT! ------------------------- */
-
-@media print {}
-
-/* Large desktop --------------------------------------- */
-@media (min-width: 1200px) {
-    nav li {
-      letter-spacing: .3em;
-    }
-
-    h2 {
-      letter-spacing: .25em;
-    }
-
-    nav .container {
-      display: table;
-    }
-
-    nav .menubar {
-      display: table-cell;
-      vertical-align: middle;
-    }
-
-    .carousel-caption {
-    max-width: 650px;
-    }
-  }
-
-/* NOTE: DEFAULT would be min 980 and max 1199 --------- */
-
-@media (min-width: 980px) and (max-width: 1199px) {
-  nav .container {
-    display: table;
-  }
-
-  nav .menubar {
-    display: table-cell;
-    vertical-align: middle;
-  }
-
-  .carousel-caption {
-    max-width: 500px;
-  }
-}
-
-/* Portrait tablet to landscape and desktop ------------ */
-@media (min-width: 768px) and (max-width: 979px) {
-    .brand {
-      width: 100%;
-      text-align: center;
-      padding-bottom: 10px;
-    }
-
-    nav ul {
-      float: none;
-    }
-
-    .menubar {
-      text-align: center;
-    }
-
-    nav .logo {
-      float: none;
-    }
-
-    nav li {
-      margin: 0px 10px;
-    }
-
-    h4 {
-      width: 60%;
-    }
-
-    .carousel-caption {
-      max-width: 356px;
-    }
-
- }
-
-/* Landscape phone to portrait tablet ------------------ */
-@media (max-width: 767px) {
-    h4 {
-      width:auto;
-    }
-
-    .brand {
-      width: 100%;
-      text-align: center;
-      padding-bottom: 10px;
-    }
-
-    nav .logo {
-      float: left;
-    }
-
-    img.logo {
-      width: 150px;
-    }
-
-    nav .menubar {
-      text-align: center;
-    }
-
-    nav li {
-      text-align: right;
-      display: list-item;
-      border: 0;
-      padding-left: 0;
-      font-size: 1.2em;
-      line-height: 1.5em;
-      letter-spacing: 2px;
-    }
-
-    nav li a:link, nav li a:visited {
-      color: #DEDEDE;
-      background-color: #E45044;
-      padding: 0 5px;
-    }
-
-    nav li a:hover {
-      background-color: #00A7B6;
-    }
-
-    .eboard strong {
-      display: inline;
-      width: auto;
-    }
-
-    .eboard strong:after {
-      content: " ";
-    }
-
-    .eboard blockquote {
-      width: 90%;
-    }
-
-    blockquote > footer {
-      text-align: left;
-    }
-
-    .content-wrap {
-      height: auto;
-      min-height: none;
-    }
-
-    footer {
-      height: auto;
-    }
-
-    footer .pull-left {
-      float: none;
-    }
-
-    footer .pull-right {
-      float: none;
-    }
-
-    footer {
-      text-align: center;
-    }
-
-    footer p {
-      margin: 0;
-    }
-}
-
-/* Landscape phones and down --------------------------- */
-@media (max-width: 480px) {
-
-    .brand {
-      width: auto;
-      padding-bottom: 0;
-    }
-    nav .logo {
-      width: 120px;
-      float: left;
-    }
-
-    nav img.logo {
-      display: block;
-    }
-
-    nav .brand {
-      text-align: center;
-    }
-
-    nav ul {
-      float: none;
-    }
-
-    nav li {
-      text-align: right;
-      display: list-item;
-      border: 0;
-      padding-left: 0;
-      font-size: 1.131em;
-      line-height: 1.5em;
-      letter-spacing: 2px;
-    }
-
-    nav li a:link, nav li a:visited {
-      color: #DEDEDE;
-      background-color: #E45044;
-      padding: 0 5px;
-    }
-
-    nav li a:hover {
-      background-color: #00A7B6;
-    }
-
-    .content-wrap {
-      height: auto;
-      min-height: none;
-    }
-
-    h2 {
-      padding-top: 4px;
-    }
-
-    footer .pull-left {
-      float: none;
-    }
-
-    footer .pull-right {
-      float: none;
-    }
-
-    footer {
-      height: auto;
-      max-height: none;
-      text-align: center;
-    }
-
-    footer p {
-      margin: 0;
-    }
-}
-
-/* ------------------- EVENT WIDGET STYLE CUSTOMIZATIONS ------------------- */
-
-.gce-widget-list {
-    font-size: .96em;
-}
-
-.gce-widget-list h5 {
-    font-size: 1.313em;
-    margin: 0;
-    border-bottom: #777 1px dotted;
-}
-
-ul.gce-list {
-    list-style-type: none;
-    padding: 0;
-}
-
-li.gce-feed-1 {
-    background-color: rgba(255,255,255,.6);
-    padding: 10px;
-    margin-bottom: 4px;
-}
-
-li.gce-feed-1:nth-child(even) {
-    background-color: rgba(173,216,199,.6);
-}
-
-.gce-widget-list span {
-    color: #555 !important;
-    font-weight: bold;
-}
-
-/* ------------------------ CAROUSEL CUSTOMIZATIONS ------------------------ */
-
-.carousel .container {
-  position: relative;
-  z-index: 9;
-}
-
-.carousel-control {
-  height: 80px;
-  margin-top: 0;
-  font-size: 120px;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
-  background-color: transparent;
-  border: 0;
-  z-index: 10;
-  color: #E45044;
-}
-
-a:hover.carousel-caption {
-  color: #fff;
-}
-
-.carousel .item {
-  height: 350px;
-}
-
-.carousel img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-}
-
-.carousel-caption {
-  background-color: rgba(20,20,20,.5);
-  position: static;
-  padding: 10px 60px;
-  margin-top: 250px;
-}
-.carousel-caption h1, .carousel-caption .lead {
-  margin: 0;
-  line-height: 1.25em;
-  color: #fff;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
-  text-transform: none;
-}
-
-.carousel-caption p.lead {
-  font-weight: 300;
-}
-.carousel-caption .btn {
-  margin-top: 10px;
-}
+// 3. Base
+@import
+  'base/base',
+  'base/form-input',
+  'base/helpers',
+  'base/typography';
+
+// 4. Layout-related sections
+@import
+  'layout/footer',
+  'layout/nav';
+
+// 5. Components
+@import
+  'components/carousel',
+  'components/event-widget',
+  'components/fauxbutton',
+  'components/subscription-form',
+  'components/tri-schpeal',
+  'components/widget';
+
+// 6. Page-specific styles
+@import
+  'pages/about',
+  'pages/eboard';
