--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -1,39 +1,9 @@
-.carousel .container {
-  position: relative;
-  z-index: 9;
-}
-
-.carousel-control {
-  height: 80px;
-  margin-top: 0;
-  font-size: 120px;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
-  background-color: transparent;
-  border: 0;
-  z-index: 10;
-  color: #E45044;
-}
-
 a:hover.carousel-caption {
   color: #fff;
 }
 
-.carousel .item {
-  height: 350px;
-}
-
-.carousel img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-}
-
 .carousel-caption {
   background-color: rgba(20,20,20,.5);
-  position: static;
-  padding: 10px 60px;
-  margin-top: 250px;
 
   h1, .lead {
     margin: 0;
@@ -46,10 +16,16 @@ a:hover.carousel-caption {
   p.lead {
     font-weight: 300;
   }
-  .btn {
-    margin-top: 10px;
-  }
 }
+
+#myCarousel > .carousel-inner > .carousel-item > img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 350px;
+}
+
+// img -> put a height
+// also object-fit: cover
 
 /* Large desktop --------------------------------------- */
 @media (min-width: 1200px) {
