--- a/style.css
+++ b/style.css
@@ -5205,37 +5205,11 @@ nav {
     nav li a:hover {
       background-color: #00A7B6; } }
 
-.carousel .container {
-  position: relative;
-  z-index: 9; }
-
-.carousel-control {
-  height: 80px;
-  margin-top: 0;
-  font-size: 120px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-  background-color: transparent;
-  border: 0;
-  z-index: 10;
-  color: #E45044; }
-
 a:hover.carousel-caption {
   color: #fff; }
 
-.carousel .item {
-  height: 350px; }
-
-.carousel img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%; }
-
 .carousel-caption {
-  background-color: rgba(20, 20, 20, 0.5);
-  position: static;
-  padding: 10px 60px;
-  margin-top: 250px; }
+  background-color: rgba(20, 20, 20, 0.5); }
   .carousel-caption h1, .carousel-caption .lead {
     margin: 0;
     line-height: 1.25em;
@@ -5244,8 +5218,11 @@ a:hover.carousel-caption {
     text-transform: none; }
   .carousel-caption p.lead {
     font-weight: 300; }
-  .carousel-caption .btn {
-    margin-top: 10px; }
+
+#myCarousel > .carousel-inner > .carousel-item > img {
+  object-fit: cover;
+  width: 100%;
+  max-height: 350px; }
 
 /* Large desktop --------------------------------------- */
 @media (min-width: 1200px) {
