Retrofit and refactor footer widgets.

--- a/sass/components/_widget.scss
+++ b/sass/components/_widget.scss
@@ -1,15 +1,7 @@
 /* --------------------------- Widgetized Footer --------------------------- */
 
 .widget {
-  a:link, a:visited {
-    color: #E45044;
-  }
-
-   a:hover {
-    color: #5DBEA9;
-  }
-
-  h3 {
+  header {
     text-transform: uppercase;
     letter-spacing: .25em;
     line-height: 1.725em;
