--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,7 @@ body {
   color: #333;
 }
 
-a:visited {
-  color: #35889B;
-}
+// @TODO: Put back later; is interfering with footer.
+// a:visited {
+//   color: #35889B;
+// }
