--- a/style.css
+++ b/style.css
@@ -542,11 +542,11 @@ dl.row > dd + dt {
   clear: left; }
 
 .img-fluid, .carousel-inner > .carousel-item > img,
-.carousel-inner > .carousel-item > a > img {
+.carousel-inner > .carousel-item > a > img, .eboard .pro-pic {
   max-width: 100%;
   height: auto; }
 
-.img-thumbnail {
+.img-thumbnail, .eboard .pro-pic {
   padding: 0.25rem;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -3736,7 +3736,7 @@ base::-moz-progress-bar,
 
 .media-object {
   display: block; }
-  .media-object.img-thumbnail {
+  .media-object.img-thumbnail, .eboard .media-object.pro-pic {
     max-width: none; }
 
 .media-right {
@@ -5333,9 +5333,8 @@ li.gce-feed-1:nth-child(even) {
 
 .eboard h3 {
   margin-bottom: .5em; }
-  .eboard h3 .position {
+  .eboard h3.position {
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.813em;
     font-weight: 400;
     color: #547980;
     letter-spacing: 1px;
