--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 /// MY COLORS
 $nucd-red: #E45044;
 $nucd-muted-teal: #35889B;
+$nucd-muddy-teal: #547980;
 $nucd-bright-teal: #5DBEA9;
 
 /// Overwrite Bootstrap Variables.
